add lesson editor and viewer
